# central

./: .gitignore  CMakeLists.txt  Kconfig  base.conf  network.conf  prj.conf
docs/: env_setup.md
overlays/: nrf5340_dk.conf
src/: coap_client.c  coap_client.h  coap_server.c  coap_server.h  handler.c  main.c  mesh.c  network.c  peripherals.c
src/include/: mesh.h  network.h  peripherals.h
src/ot/: handler.c  handler.h  handler_ll.c  handler_ll.h  mesh.c  mesh.h  network.c  network.h  types.h
src/system/: errors.h  types.h
src/utils/: peripherals.c
